--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 	<meta charset="UTF-8">
 	<meta name="format-detection" content="telephone=no">
 	<!-- <style>body{opacity: 0;}</style> -->
-	<link rel="stylesheet" href="css/style.min.css?_v=20230523225626">
+	<link rel="stylesheet" href="css/style.min.css?_v=20230524212510">
 	<link rel="shortcut icon" href="favicon.ico">
 	<!-- <meta name="robots" content="noindex, nofollow"> -->
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -103,7 +103,7 @@
 								</div>
 							</div>
 						</div>
-						<a href="#" class="about__button button button_dark" data-da='.about__image, 991.98'>
+						<a href="#" id='about__button' class="about__button button button_dark" data-da='.about__image, 991.98'>
 							<div class="button__text">Explore Now </div>
 							<div class="button__icon">
 								<img src="img/icons/arrow.svg" alt="Icon">
@@ -640,7 +640,7 @@
 			</div>
 		</footer>
 	</div>
-	<script src="js/app.min.js?_v=20230523225626"></script>
+	<script src="js/app.min.js?_v=20230524212510"></script>
 </body>
 
 </html>
